ENT-11113 Fixed review comments